tests/dataset/tpc-ds/compiler/c/q56.error
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c: In function ‘test_TPCDS_Q56_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:302:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  302 |   if (test_TPCDS_Q56_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:306:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  306 |       if (test_TPCDS_Q56_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:338:25: warning: implicit declaration of function ‘ss_item_list_t_create’ [-Wimplicit-function-declaration]
  338 |   ss_item_list_t tmp9 = ss_item_list_t_create(tmp8.len);
      |                         ^~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:338:25: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:342:31: warning: implicit declaration of function ‘store_sale_list_t_create’ [-Wimplicit-function-declaration]
  342 |     store_sale_list_t tmp11 = store_sale_list_t_create(_gp.items.len);
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:342:31: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:377:26: warning: implicit declaration of function ‘cs_item_list_t_create’ [-Wimplicit-function-declaration]
  377 |   cs_item_list_t tmp21 = cs_item_list_t_create(tmp20.len);
      |                          ^~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:377:26: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:381:33: warning: implicit declaration of function ‘catalog_sale_list_t_create’ [-Wimplicit-function-declaration]
  381 |     catalog_sale_list_t tmp23 = catalog_sale_list_t_create(_gp.items.len);
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:381:33: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:416:26: warning: implicit declaration of function ‘ws_item_list_t_create’ [-Wimplicit-function-declaration]
  416 |   ws_item_list_t tmp33 = ws_item_list_t_create(tmp32.len);
      |                          ^~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:416:26: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:420:29: warning: implicit declaration of function ‘web_sale_list_t_create’ [-Wimplicit-function-declaration]
  420 |     web_sale_list_t tmp35 = web_sale_list_t_create(_gp.items.len);
      |                             ^~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:420:29: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:442:21: warning: implicit declaration of function ‘concat’ [-Wimplicit-function-declaration]
  442 |   list_int _union = concat(ss, cs, ws);
      |                     ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:442:21: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq561247132649/001/prog.c:459:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  459 |   test_TPCDS_Q56_simplified_result = result;
      |                                      ^~~~~~
