tests/dataset/tpc-ds/compiler/c/q56.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:43Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:43Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int key;
  list_int items;
} _GroupInt;
typedef struct {
  int len;
  int cap;
  _GroupInt *data;
} list_group_int;
static list_group_int _group_by_int(list_int src) {
  list_group_int res;
  res.len = 0;
  res.cap = 0;
  res.data = NULL;
  for (int i = 0; i < src.len; i++) {
    int key = src.data[i];
    int idx = -1;
    for (int j = 0; j < res.len; j++)
      if (res.data[j].key == key) {
        idx = j;
        break;
      }
    if (idx == -1) {
      if (res.len >= res.cap) {
        res.cap = res.cap ? res.cap * 2 : 4;
        res.data = (_GroupInt *)realloc(res.data, sizeof(_GroupInt) * res.cap);
      }
      res.data[res.len].key = key;
      res.data[res.len].items = list_int_create(0);
      idx = res.len++;
    }
    _GroupInt *g = &res.data[idx];
    g->items.data =
        (int *)realloc(g->items.data, sizeof(int) * (g->items.len + 1));
    g->items.data[g->items.len++] = src.data[i];
  }
  return res;
}
typedef struct {
  int i_item_id;
  double total_sales;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int item;
  double price;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int item;
  double price;
} catalog_sale_t;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int item;
  double price;
} web_sale_t;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int item;
  double total;
} ss_item_t;
typedef struct {
  int len;
  ss_item_t *data;
} ss_item_list_t;
ss_item_list_t create_ss_item_list(int len) {
  ss_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ss_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int item;
  double total;
} cs_item_t;
typedef struct {
  int len;
  cs_item_t *data;
} cs_item_list_t;
cs_item_list_t create_cs_item_list(int len) {
  cs_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(cs_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int item;
  double total;
} ws_item_t;
typedef struct {
  int len;
  ws_item_t *data;
} ws_item_list_t;
ws_item_list_t create_ws_item_list(int len) {
  ws_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ws_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_id;
  double total_sales;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q56_simplified_result;
static void test_TPCDS_Q56_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.i_item_id = 1, .total_sales = 60.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q56_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q56_simplified_result.len; i3++) {
      if (test_TPCDS_Q56_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {(store_sale_t){.item = 1, .price = 10.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  catalog_sale_t catalog_sales[] = {(catalog_sale_t){.item = 1, .price = 20.0}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  web_sale_t web_sales[] = {(web_sale_t){.item = 1, .price = 30.0}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  store_sale_list_t tmp4 = create_store_sale_list(store_sales_len);
  int tmp5_data[store_sales_len];
  list_int tmp5 = {0, tmp5_data};
  int tmp6 = 0;
  for (int i7 = 0; i7 < store_sales_len; i7++) {
    store_sale_t s = store_sales[i7];
    tmp4.data[tmp6] = s;
    tmp5.data[tmp6] = s.item;
    tmp6++;
  }
  tmp4.len = tmp6;
  tmp5.len = tmp6;
  list_group_int tmp8 = _group_by_int(tmp5);
  ss_item_list_t tmp9 = ss_item_list_t_create(tmp8.len);
  int tmp10 = 0;
  for (int gi = 0; gi < tmp8.len; gi++) {
    _GroupInt _gp = tmp8.data[gi];
    store_sale_list_t tmp11 = store_sale_list_t_create(_gp.items.len);
    for (int i12 = 0; i12 < _gp.items.len; i12++) {
      tmp11.data[i12] = tmp4.data[_gp.items.data[i12]];
    }
    tmp11.len = _gp.items.len;
    struct {
      int key;
      store_sale_list_t items;
    } g = {_gp.key, tmp11};
    list_float tmp13 = list_float_create(g.items.len);
    int tmp14 = 0;
    for (int i15 = 0; i15 < g.items.len; i15++) {
      store_sale_t x = g.items.data[i15];
      tmp13.data[tmp14] = x.price;
      tmp14++;
    }
    tmp13.len = tmp14;
    tmp9.data[tmp10] = (ss_item_t){.item = g.key, .total = _sum_float(tmp13)};
    tmp10++;
  }
  tmp9.len = tmp10;
  ss_item_list_t ss = tmp9;
  catalog_sale_list_t tmp16 = create_catalog_sale_list(catalog_sales_len);
  int tmp17_data[catalog_sales_len];
  list_int tmp17 = {0, tmp17_data};
  int tmp18 = 0;
  for (int i19 = 0; i19 < catalog_sales_len; i19++) {
    catalog_sale_t s = catalog_sales[i19];
    tmp16.data[tmp18] = s;
    tmp17.data[tmp18] = s.item;
    tmp18++;
  }
  tmp16.len = tmp18;
  tmp17.len = tmp18;
  list_group_int tmp20 = _group_by_int(tmp17);
  cs_item_list_t tmp21 = cs_item_list_t_create(tmp20.len);
  int tmp22 = 0;
  for (int gi = 0; gi < tmp20.len; gi++) {
    _GroupInt _gp = tmp20.data[gi];
    catalog_sale_list_t tmp23 = catalog_sale_list_t_create(_gp.items.len);
    for (int i24 = 0; i24 < _gp.items.len; i24++) {
      tmp23.data[i24] = tmp16.data[_gp.items.data[i24]];
    }
    tmp23.len = _gp.items.len;
    struct {
      int key;
      catalog_sale_list_t items;
    } g = {_gp.key, tmp23};
    list_float tmp25 = list_float_create(g.items.len);
    int tmp26 = 0;
    for (int i27 = 0; i27 < g.items.len; i27++) {
      catalog_sale_t x = g.items.data[i27];
      tmp25.data[tmp26] = x.price;
      tmp26++;
    }
    tmp25.len = tmp26;
    tmp21.data[tmp22] = (cs_item_t){.item = g.key, .total = _sum_float(tmp25)};
    tmp22++;
  }
  tmp21.len = tmp22;
  cs_item_list_t cs = tmp21;
  web_sale_list_t tmp28 = create_web_sale_list(web_sales_len);
  int tmp29_data[web_sales_len];
  list_int tmp29 = {0, tmp29_data};
  int tmp30 = 0;
  for (int i31 = 0; i31 < web_sales_len; i31++) {
    web_sale_t s = web_sales[i31];
    tmp28.data[tmp30] = s;
    tmp29.data[tmp30] = s.item;
    tmp30++;
  }
  tmp28.len = tmp30;
  tmp29.len = tmp30;
  list_group_int tmp32 = _group_by_int(tmp29);
  ws_item_list_t tmp33 = ws_item_list_t_create(tmp32.len);
  int tmp34 = 0;
  for (int gi = 0; gi < tmp32.len; gi++) {
    _GroupInt _gp = tmp32.data[gi];
    web_sale_list_t tmp35 = web_sale_list_t_create(_gp.items.len);
    for (int i36 = 0; i36 < _gp.items.len; i36++) {
      tmp35.data[i36] = tmp28.data[_gp.items.data[i36]];
    }
    tmp35.len = _gp.items.len;
    struct {
      int key;
      web_sale_list_t items;
    } g = {_gp.key, tmp35};
    list_float tmp37 = list_float_create(g.items.len);
    int tmp38 = 0;
    for (int i39 = 0; i39 < g.items.len; i39++) {
      web_sale_t x = g.items.data[i39];
      tmp37.data[tmp38] = x.price;
      tmp38++;
    }
    tmp37.len = tmp38;
    tmp33.data[tmp34] = (ws_item_t){.item = g.key, .total = _sum_float(tmp37)};
    tmp34++;
  }
  tmp33.len = tmp34;
  ws_item_list_t ws = tmp33;
  list_int _union = concat(ss, cs, ws);
  result_item_list_t result = (result_item_list_t){0, NULL};
  printf("[");
  for (int i40 = 0; i40 < result.len; i40++) {
    if (i40 > 0)
      printf(",");
    result_item_t it = result.data[i40];
    printf("{");
    _json_string("i_item_id");
    printf(":");
    printf(",");
    _json_string("total_sales");
    printf(":");
    _json_float(it.total_sales);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q56_simplified_result = result;
  test_TPCDS_Q56_simplified();
  return 0;
}
